fix scroll to top position on mobile

--- a/styles/scrollToTop.module.css
+++ b/styles/scrollToTop.module.css
@@ -20,7 +20,6 @@
 
 @media screen and (max-width: 736px) {
   .container {
-    bottom: 5.5rem;
     right: 1.2rem;
   }
 }
